# Capsule

./: README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: logback.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/res/anim/: dialog_in_bottom.xml  dialog_out_bottom.xml
android/app/src/main/res/color/: theme_text_color_primary.xml
android/app/src/main/res/drawable/: bg_dialog_title.xml  bg_pre_block.xml  bg_rounded_corners.xml  bg_url_field_focused.xml  bg_url_field_selector.xml  theme_bg_app_bar.xml  theme_bg_bottom_bar.xml  widget_switch_thumb.xml  widget_switch_track.xml
android/app/src/main/res/interpolator/: fluent.xml
android/app/src/main/res/layout/: activity_main.xml  dialog_input.xml  dialog_security_issue.xml  dialog_tabs.xml  dialog_view.xml  fragment_about.xml  fragment_browser.xml  fragment_settings.xml  gemtext_anchor_block.xml  gemtext_blockquote.xml  gemtext_h1.xml  gemtext_h2.xml  gemtext_h3.xml  gemtext_image.xml  gemtext_li_block.xml  gemtext_page_certificate_error.xml  gemtext_page_empty.xml  gemtext_page_invalid.xml  gemtext_page_security_issue.xml  gemtext_paragraph.xml  gemtext_pre.xml  view_gemini.xml  view_tabs_button.xml
android/app/src/main/res/menu/: main_bottom_app_bar.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
jniLibs/: README.md
parser/: .gitignore  Makefile  capsule.cpp  fixture.gmi  gemicom.cpp  gemtext.l  gemtext.y  main.c
(+58 files in other folders)
